<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.cs407.attendanceapp.ProfessorHomePage">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="340dp"
        android:background="#C69090"
        app:layout_constraintBottom_toTopOf="@+id/allCourses"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/AppTheme.PopupOverlay">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/atapdance"
            android:textColor="#040303"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="150dp"
            tools:layout_editor_absoluteY="19dp" />

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="start"
            android:src="@drawable/tap_dance_icon"
            tools:layout_editor_absoluteX="16dp" />

        <ImageView
            android:id="@+id/profile_icon"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="end"
            android:onClick="showProfilePopupMenu"
            android:src="@drawable/profile_icon"
            tools:layout_editor_absoluteX="363dp"
            tools:layout_editor_absoluteY="8dp" />

    </androidx.appcompat.widget.Toolbar>

    <Button
        android:id="@+id/plusButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:background="@android:color/transparent"
        android:drawableTop="@drawable/ic_plus"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/coursesToday"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/coursesToday"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="37dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="76dp"
        android:layout_marginBottom="1dp"
        android:text="@string/courses_today"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/class_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/plusButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <ListView
        android:id="@+id/class_list"
        android:layout_width="338dp"
        android:layout_height="226dp"
        android:layout_marginStart="37dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="13dp"
        app:layout_constraintBottom_toTopOf="@+id/allCourses"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/coursesToday" />

    <TextView
        android:id="@+id/allCourses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/all_courses"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/class_list_all"
        app:layout_constraintStart_toStartOf="@+id/class_list_all"
        app:layout_constraintTop_toBottomOf="@+id/class_list" />

    <ListView
        android:id="@+id/class_list_all"
        android:layout_width="338dp"
        android:layout_height="246dp"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="34dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/allCourses"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>