<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cs407.attendanceapp.ProfessorHomePage">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#C69090"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/AppTheme.PopupOverlay">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/atapdance"
            android:textColor="#040303"
            android:textSize="40sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="150dp"
            tools:layout_editor_absoluteY="19dp" />

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="start"
            android:src="@drawable/tap_dance_icon"
            tools:layout_editor_absoluteX="16dp" />

        <ImageView
            android:id="@+id/profile_icon"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="end"
            android:onClick="showProfilePopupMenu"
            android:src="@drawable/profile_icon"
            tools:layout_editor_absoluteX="363dp"
            tools:layout_editor_absoluteY="8dp" />

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/centerVerticalLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:id="@+id/coursesTodayBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/coursesToday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/courses_today"
                android:textSize="34sp"
                android:textStyle="bold" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/plusButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center_horizontal"
                android:background="@android:color/transparent"
                android:drawableTop="@drawable/ic_plus" />

        </LinearLayout>

        <ListView
            android:id="@+id/class_list"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            app:layout_constraintBottom_toTopOf="@id/allCoursesBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/coursesTodayBar" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="25dp" />

        <LinearLayout
            android:id="@+id/allCoursesBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@id/class_list_all"
            app:layout_constraintTop_toBottomOf="@id/class_list">

            <TextView
                android:id="@+id/allCourses"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/all_courses"
                android:textSize="34sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="45dp"
                tools:layout_editor_absoluteY="887dp" />

        </LinearLayout>

        <ListView
            android:id="@+id/class_list_all"
            android:layout_width="match_parent"
            android:layout_height="202dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/allCoursesBar"></ListView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>